# Hellion

./: .gitignore  README.md  docker-compose.yml
.github/docs/: api.md  architecture.md  openapi.yaml  performance.md  test-packs.md
.github/workflows/: ci.yml
control/: Dockerfile  db.go  go.mod  go.sum  main.go  openapi.yaml
control/web/: index.html
control/web/css/: style.css
control/web/js/: api.js  app.js
scopes/: local-juice-shop.yaml
test-packs/: csrf-flow-test.yaml  headers-basic.yaml  http-rich-test.yaml  juice-shop-detect.yaml  juice-shop-vulnerable.yaml
tests/: bench.sh  e2e.sh  queue-only.sh
worker/: Cargo.toml  Dockerfile
worker/src/: main.rs
