[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
deadpool-postgres = "0.14"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
url = "2"
regex = "1"
async-nats = "0.38"
futures = "0.3"
